# llms-txt-generator

./: .env.template  .gitignore  README.md  amplify.yml  docker-compose.yml
frontend/: next.config.ts  package-lock.json
frontend/src/app/: globals.css
frontend/src/components/: job-progress.tsx  result-view.tsx  url-form.tsx
frontend/src/lib/: production-env-keys.ts  types.ts  url-validation.ts
frontend/src/lib/aws/: dynamo.ts  sqs.ts
generator/: .dockerignore  Dockerfile  pyproject.toml
generator/src/llms_txt_generator/: config.py  dev_runner.py  handler.py
generator/src/llms_txt_generator/crawler/: fetcher.py  orchestrator.py  robots.py
generator/src/llms_txt_generator/extraction/: parser.py
generator/src/llms_txt_generator/generator/: llms_txt.py
generator/src/llms_txt_generator/persistence/: models.py  repository.py
generator/src/llms_txt_generator/ranking/: grouper.py
generator/tests/: conftest.py  test_fetcher.py  test_grouper.py  test_handler.py  test_llms_txt.py  test_orchestrator.py  test_parser.py  test_repository.py  test_robots.py  test_ssrf.py
infra/: app.py
infra/stacks/: backend_stack.py
web/: .gitignore  next.config.ts  package.json
web/src/app/: layout.tsx  page.tsx
web/src/components/: job-progress.tsx  result-view.tsx  url-form.tsx
web/src/lib/: env.ts
web/src/lib/aws/: dynamo.ts  sqs.ts
worker/: Dockerfile  pyproject.toml
worker/src/llms_txt_worker/: config.py  dev_runner.py  handler.py
worker/tests/: conftest.py  test_grouper.py  test_llms_txt.py  test_orchestrator.py  test_parser.py  test_ssrf.py
(+12 files in other folders)
